2010-08-31  Jeremy Orlow  <jorlow@chromium.org>

        Build fix.

        * storage/IDBObjectStoreBackendImpl.cpp:
        (WebCore::IDBObjectStoreBackendImpl::openCursor):

2010-08-24  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Steve Block.

        Implement the rest of IDBCursors + make them persistent
        https://bugs.webkit.org/show_bug.cgi?id=44546

        Because the old (memory only) backend didn't support ranges, IDBCursors
        were never really finished.  This completes them on top of SQLite like
        the rest of IndexedDB.

        Test: storage/indexeddb/objectstore-cursor.html

        * storage/IDBCursor.cpp:
        (WebCore::IDBCursor::value):
        * storage/IDBCursorBackendImpl.cpp:
        (WebCore::IDBCursorBackendImpl::IDBCursorBackendImpl):
        (WebCore::IDBCursorBackendImpl::key):
        (WebCore::IDBCursorBackendImpl::value):
        (WebCore::IDBCursorBackendImpl::update):
        (WebCore::IDBCursorBackendImpl::continueFunction):
        (WebCore::IDBCursorBackendImpl::remove):
        (WebCore::IDBCursorBackendImpl::loadCurrentRow):
        * storage/IDBCursorBackendImpl.h:
        (WebCore::IDBCursorBackendImpl::create):
        * storage/IDBCursorBackendInterface.h:
        * storage/IDBKey.cpp:
        (WebCore::IDBKey::isEqual):
        * storage/IDBKey.h:
        * storage/IDBKeyRange.cpp:
        (WebCore::IDBKeyRange::leftBound):
        (WebCore::IDBKeyRange::rightBound):
        (WebCore::IDBKeyRange::bound):
        * storage/IDBObjectStoreBackendImpl.cpp:
        (WebCore::cursorWhereFragment):
        (WebCore::IDBObjectStoreBackendImpl::openCursor):

2010-08-27  John Gregg  <johnnyg@google.com>

        Reviewed by David Levin.

        Notifications should support a click event
        https://bugs.webkit.org/show_bug.cgi?id=44800

        Test: fast/notifications/notifications-click-event.html

        * notifications/Notification.h:
        * notifications/Notification.idl:
